--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the rdoc documentation generator for http://merbivore.com
+This is the rdoc documentation website generator for http://merbivore.com
